// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification Permission view renders correctly 1`] = `
<View
  style={
    {
      "backgroundColor": "lightgrey",
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "white",
        "borderColor": "lightgrey",
        "borderRadius": 6,
        "borderWidth": 1,
        "flex": 1,
        "justifyContent": "space-between",
        "margin": 12,
      }
    }
  >
    <View />
    <View>
      <Text
        style={
          [
            {
              "fontSize": 20,
              "marginHorizontal": 8,
              "marginVertical": 8,
              "minWidth": 240,
            },
            {
              "textAlign": "center",
            },
          ]
        }
      >
        Hacker News App
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
        }
      }
    >
      <Text
        style={
          {
            "textAlign": "center",
            "width": 240,
          }
        }
      >
        We request your permission to receive notifications in order to let you know when articles of your interest are created
      </Text>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
        testID="notification-permission_continue"
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "blue",
              "borderRadius": 6,
              "justifyContent": "center",
              "marginTop": 12,
              "padding": 12,
            }
          }
        >
          <Text
            style={
              {
                "color": "white",
                "minWidth": 120,
                "textAlign": "center",
              }
            }
          >
            Continue
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
        testID="notification-permission_deny"
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "blue",
              "borderRadius": 6,
              "justifyContent": "center",
              "marginTop": 12,
              "padding": 12,
            }
          }
        >
          <Text
            style={
              {
                "color": "white",
                "minWidth": 120,
                "textAlign": "center",
              }
            }
          >
            Don't send me notifications please
          </Text>
        </View>
      </View>
    </View>
    <View />
  </View>
</View>
`;

exports[`Notification Permission view should call set notifications enabled true and navigate to app if user decides to continue 1`] = `
<View
  style={
    {
      "backgroundColor": "lightgrey",
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "white",
        "borderColor": "lightgrey",
        "borderRadius": 6,
        "borderWidth": 1,
        "flex": 1,
        "justifyContent": "space-between",
        "margin": 12,
      }
    }
  >
    <View />
    <View>
      <Text
        style={
          [
            {
              "fontSize": 20,
              "marginHorizontal": 8,
              "marginVertical": 8,
              "minWidth": 240,
            },
            {
              "textAlign": "center",
            },
          ]
        }
      >
        Hacker News App
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
        }
      }
    >
      <Text
        style={
          {
            "textAlign": "center",
            "width": 240,
          }
        }
      >
        We request your permission to receive notifications in order to let you know when articles of your interest are created
      </Text>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "blue",
              "borderRadius": 6,
              "justifyContent": "center",
              "marginTop": 12,
              "padding": 12,
            }
          }
        >
          <Text
            style={
              {
                "color": "white",
                "minWidth": 120,
                "textAlign": "center",
              }
            }
          >
            Continue
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "blue",
              "borderRadius": 6,
              "justifyContent": "center",
              "marginTop": 12,
              "padding": 12,
            }
          }
        >
          <Text
            style={
              {
                "color": "white",
                "minWidth": 120,
                "textAlign": "center",
              }
            }
          >
            Don't send me notifications please
          </Text>
        </View>
      </View>
    </View>
    <View />
  </View>
</View>
`;
